--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -1,7 +1,9 @@
 html{
     height: 100%;
 }
-
+.Nav-button{
+    display: none;
+}
 body{
     background: #0F1026;
     height: 100%;
@@ -22,10 +24,10 @@ body{
     position: absolute;
     top: 50%;
     margin-top: -100px;
-
     width: 200px;
     height: 340px;
     list-style: none;
+    display: block;
 }
 .btnMenu{
     position: absolute;
@@ -37,6 +39,7 @@ body{
     font-weight: bold;
 }
 .btnMenu:hover{
+    transition:.5s;
     color: rgb(255, 255, 255);
     text-decoration: underline;
 }
@@ -154,9 +157,7 @@ body{
 }
 #SocialIcon{
     position: absolute;
-    
     width: 260px;
-  
     top: 50%;
     left: 0%;
     margin-top: 50px;
@@ -171,6 +172,7 @@ body{
     width: 43px;
 }
 .IconImg:hover{
+    transition:.2s;
     width: 45px;
     margin-top: -04px;
 }
@@ -252,4 +254,225 @@ body{
     top: 20%;
     left: 5%;
     margin-top: 100px;
+}
+
+
+/* Para mobile => */
+
+@media screen and (max-width: 850px){
+    .Nav-button{
+        position: absolute;
+        top: 50%;
+        right: 10%;
+        margin-top: -20px;
+        display: block;
+        background:none;
+        border: none;
+    }
+    .ImgButton{
+        width: 35px;
+    }
+
+    #Menu{
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+        position: fixed;
+        z-index: 10;
+        bottom: 0%;
+        top: 0%;
+        left: 0%;
+        height: 50px;
+        width: 100%;
+        background-color: #131212;
+    }
+
+    .navbar{    
+        position: absolute;
+        top: 0%;
+        margin-top: 50px;
+        background-color: #131212;
+        width: 100%;
+        height: 200px;
+        list-style: none;
+        display: none;
+
+    }
+
+    .btnMenu{
+        position: absolute;
+        text-align: center;
+        width: 250px;
+        color: rgba(255, 255, 255, 0.616);
+        text-decoration: none;
+        font-size: 18px;
+        font-weight: bold;
+    }
+    .btnMenu:hover{
+        transition:.5s;
+        color: rgb(255, 255, 255);
+        text-decoration: underline;
+    }
+    #img_perfil{
+        display: none;
+    }
+    .navItem{
+        position: absolute;
+        width: 250px;
+        height: 20px;
+        left: 50%;
+        margin-left: -140px;
+    }
+    .Sections{
+        margin-left: 0px;
+        margin-right: 0px;
+        position: relative;
+        height: 95%;
+        min-height: 95%;
+        width: auto;
+        top: 0%;
+        left: 0%;
+        background: #131212;
+        border-radius: 10px;
+        margin-top: 50px;
+        word-wrap: break-word;
+        overflow: hidden;
+        text-overflow: ellipsis; 
+    }
+    #SectionInicio{
+        margin-top: 80px;
+    }
+    #TituloNome{
+        font-family: 'Segoe UI'!important;
+        text-decoration: underline;
+        position: absolute;
+        top: 40%;
+        left: 10%;
+        font-size:40px;
+        font-weight: bolder;
+        width: 420px;
+        height: 45px;
+        margin-left: 0px;
+        margin-top: -40px;
+        color: white;
+        letter-spacing: 2px;
+    }
+    #SubTitulo{
+        position: absolute;
+        color: #F2911B;
+        top: 40%;
+        left: 10%;
+        font-size: 25px;
+        font-weight: bold;
+        width: 355px;
+        height: 45px;
+        margin-left: 150px;
+        margin-top: 15px;
+    }
+    #CentralFormacoes{
+        position: relative;
+        top: 20%;
+        left: 0%;
+        margin-top: 100px;
+        margin-left: 0px;
+    }
+
+
+}
+
+@media screen and (max-width: 1000px){
+    #TituloNome{
+        font-family: 'Segoe UI'!important;
+        text-decoration: underline;
+        position: absolute;
+        top: 40%;
+        left: 10%;
+        font-size:30px;
+        font-weight: bolder;
+        width: 420px;
+        height: 45px;
+        margin-left: 0px;
+        margin-top: -40px;
+        color: white;
+        letter-spacing: 2px;
+    }
+    #SubTitulo{
+        position: absolute;
+        color: #F2911B;
+        top: 40%;
+        left: 10%;
+        font-size: 15px;
+        font-weight: bold;
+        width: 355px;
+        height: 45px;
+        margin-left: 120px;
+        margin-top: 15px;
+    }
+    #InicioSpan{
+        top: 50%;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+        position: absolute;
+        color: white;
+        font-weight: bold;
+        font-size: 14px;
+        margin-left: 50px;
+        margin-left: 30px;
+    }
+    .DescricaoFormacao{
+        font-weight: 500;
+        font-size: 15px;
+    }
+    .Status{
+        font-size: 15px;
+    }
+
+}
+
+
+
+@media screen and (max-height: 745px){
+    #ProjetosTitulo{
+        top: 10%;
+        left: 5%;
+        font-size:40px;
+        width: 380px;
+        height: 45px;
+        margin-left: 0px;
+        margin-top: 20px;
+    }
+    #ProjetosDiv{
+        word-wrap: break-word;
+        position: absolute;
+        width: 80%;
+        top: 10%;
+        left: 5%;
+        margin-top: 110px;
+    }
+    .ListaProjetos{
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+        color: white;
+        line-height: 30px;
+        font-weight: normal;
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-height: 615px){
+    #CentralFormacoes{
+        display:flow-root;
+    }
+
+    .SubTituloFormacao{
+        font-size: 23px;
+    }
+    .DescricaoFormacao{
+        font-weight: 500;
+    }
+    #FormacaoTitulo{
+        top: 10%;
+        left: 5%;
+        font-size:40px;
+        width: 380px;
+        height: 45px;
+        margin-left: 0px;
+        margin-top: 0px;
+    }
 }
