--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -135,14 +135,17 @@ body{
     width: 45px;
     margin-top: 5px;
     margin-left: 10px;
+    background-color: rgba(0, 0, 0, 0.726);
+    padding: 4px;
+    border-radius: 20px;
 }
 #LinguagensEFerramentas{
     position: absolute;
     top: 20%;
     left: 4%;
+    width: 95%;
     margin-left: 0px;
-    margin-top: 200px;
-
+    margin-top: 220px;
 }
 #ProjetosDiv{
     word-wrap: break-word;
@@ -252,7 +255,7 @@ body{
     font-size: 23px;
 }
 .DescricaoFormacao{
-    font-weight: 500;
+    font-weight: 500px;
 }
 .IconsFeL{
     cursor: pointer;
@@ -296,7 +299,6 @@ body{
     .ImgButton{
         width: 35px;
     }
-
     #Menu{
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
         position: fixed;
@@ -410,12 +412,27 @@ body{
         margin-left: 150px;
         margin-top: 15px;
     }
+
     #CentralFormacoes{
         position: relative;
         top: 20%;
-        left: 0%;
+        left: 5%;
         margin-top: 100px;
         margin-left: 0px;
+    }
+    .DescricaoFormacao{
+        font-weight: 500;
+        width: 95%;
+        font-size: 14px;
+        word-wrap: break-word;
+    }
+    .Status{
+        font-size: 13px;
+    }
+    .ListaProjetos{
+        line-height: 30px;
+        font-weight: normal;
+        font-size: 15px;
     }
 }
 
@@ -457,13 +474,7 @@ body{
         margin-left: 50px;
         margin-left: 30px;
     }
-    .DescricaoFormacao{
-        font-weight: 500;
-        font-size: 15px;
-    }
-    .Status{
-        font-size: 15px;
-    }
+
 
 }
 
@@ -486,8 +497,6 @@ body{
         margin-top: 110px;
     }
     .ListaProjetos{
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
-        color: white;
         line-height: 30px;
         font-weight: normal;
         font-size: 15px;
@@ -513,5 +522,10 @@ body{
         height: 45px;
         margin-left: 0px;
         margin-top: 0px;
+    }
+}
+@media screen and (max-height: 400px){
+    .Sections{
+        height: 200%;
     }
 }
