--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -13,6 +13,7 @@ html{
     border: none;
     background:none;
     border-radius: 50px;
+    text-decoration: none;
 }
 .ThemeButton{
     cursor: pointer;
@@ -48,6 +49,7 @@ body{
     height: 200px;
     list-style: none;
     display: block;
+    text-decoration: none;
 }
 .btnMenu{
     position: absolute;
@@ -57,6 +59,7 @@ body{
     text-decoration: none;
     font-size: 18px;
     font-weight: bold;
+    text-decoration: none;
 }
 .btnMenu:hover{
     transition:.5s;
@@ -79,6 +82,7 @@ body{
     height: 20px;
     left: 0%;
     margin-left: 25px;
+    text-decoration: none;
 }
 .Sections{
     margin-left: 350px;
@@ -286,9 +290,11 @@ body{
         display: block;
         background:none;
         border: none;
+   
     }
     .ImgButton{
         width: 35px;
+        
     }
     #Menu{
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
