--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -255,9 +255,6 @@ body{
 .DescricaoFormacao{
     font-weight: 500px;
 }
-.IconsFeL{
-    cursor: pointer;
-}
 .PExperiencia{
     text-align: left;
     letter-spacing: 0.2px;
@@ -267,18 +264,6 @@ body{
 }
 .TituloProject{
     font-size: 26px;
-}
-#AboutEvo{
-    position: absolute;
-    top: 20%;
-    left: 5%;
-    margin-top: 150px;
-}
-#TituloEvo{
-    position: absolute;
-    top: 20%;
-    left: 5%;
-    margin-top: 100px;
 }
 
 /* Para mobile => */
@@ -312,10 +297,10 @@ body{
     .navbar{    
         position: absolute;
         top: 100%;
-        margin-top: 0px;
+        margin-top: 0%;
         background-color: #131212;
         width: 100%;
-        height: 200px;
+        height: 160px;
         list-style: none;
         display: none;
     }
